[build-system]
requires = [
    "setuptools",
    "wheel",
    "mypy[mypyc]==2.1.0",
    "pandas-stubs==3.0.3.260530; python_version < '3.11'",
    "pandas-stubs==3.0.3.260530; python_version >= '3.11'",
    "pony-stubs==0.5.2",
    "types-aiofiles",
    "types-tqdm",
    "dank-mids==4.20.211; platform_system == 'MacOS' or (platform_system == 'Linux' and platform_machine != 'i686')",
    "eth-brownie==1.22.1; sys_platform=='linux' and platform_machine != 'i686'",
    "eth-retry==0.3.7",
    "eth-typing==5.2.1",
    "evmspec==0.5.2; sys_platform!='win32'",
    "ez-a-sync>=0.34,<0.35",
    "faster-async-lru==2.0.5.3",
    "typed-envs==0.2.4",
]

[tool.mypy]
exclude = ["build/","cache/","env/"]
plugins = ["typed_envs.mypy_plugin", "a_sync_mypy_plugin"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hypothesis
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | cache
  | dist
  | env
)/
'''
